--- a/source/css/style.css
+++ b/source/css/style.css
@@ -4102,7 +4102,7 @@ body div#content.sub section.sub-reservation div.container div.select-option > d
 body div#content.sub section.sub-reservation div.container div.select-option > div.seat div.map-check hr {
   display: block;
   border: none;
-  height: 1ㅔㅌ;
+  height: 1px;
 }
 body div#content.sub section.sub-reservation div.container div.select-option > div.seat div.map-check h7 {
   display: block;
