--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -2442,8 +2442,8 @@ body {
 
                           &.seat-pregnant {
                             span {
-                              border-color:#896967;
-                              background: #9F8786;
+                              border-color:#A384B5;
+                              background: #E6D0F2;
                             }
                           }
 
@@ -2479,7 +2479,7 @@ body {
                   hr {
                     display:block;
                     border:none;
-                    height:1ㅔㅌ;
+                    height:1px;
                   }
 
 
@@ -2613,8 +2613,9 @@ body {
                           &.seat-pregnant {
                             button {
 
-                              border-color:#896967;
-                              background: #9F8786;
+
+                              border-color:#A384B5;
+                              background: #E6D0F2;
                             }
                           }
 
