--- a/source/css/style.css
+++ b/source/css/style.css
@@ -2111,14 +2111,50 @@ body header .container div.tools a {
   }
 }
 body nav#main-menu {
+  position: relative;
   height: 58px;
   background: #F2F6F8;
   text-align: center;
   font-size: 0;
+  white-space: nowrap;
+  overflow-x: auto;
+  padding: 0 20px;
 }
 @media (min-width: 1030px) {
   body nav#main-menu {
     height: 66px;
+  }
+}
+body nav#main-menu::before {
+  content: "";
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  width: 30px;
+  background-color: rgba(0, 0, 0, 0.5);
+  background: linear-gradient(90deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0));
+}
+@media (min-width: 1030px) {
+  body nav#main-menu::before {
+    display: none;
+  }
+}
+body nav#main-menu::after {
+  content: "";
+  display: block;
+  position: fixed;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  width: 30px;
+  background-color: rgba(0, 0, 0, 0);
+  background: linear-gradient(90deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.5));
+}
+@media (min-width: 1030px) {
+  body nav#main-menu::after {
+    display: none;
   }
 }
 body nav#main-menu a {
@@ -2143,6 +2179,18 @@ body nav#main-menu a.on {
   border-color: #13274A;
   box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.15);
   color: #fff;
+}
+body nav#main-menu a.blank {
+  color: #818CF2;
+  padding-left: 28px;
+  background: url("data:image/svg+xml,%3Csvg id='그룹_1697' data-name='그룹 1697' xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cpath id='패스_21516' data-name='패스 21516' d='M0,0H24V24H0Z' fill='none'/%3E%3Cpath id='패스_21517' data-name='패스 21517' d='M19,19H5V5h7V3H5A2,2,0,0,0,3,5V19a2,2,0,0,0,2,2H19a2.006,2.006,0,0,0,2-2V12H19ZM14,3V5h3.59L7.76,14.83l1.41,1.41L19,6.41V10h2V3Z' fill='%23818cf2'/%3E%3C/svg%3E%0A") no-repeat left center/auto 22px;
+}
+@media (min-width: 1030px) {
+  body nav#main-menu a.blank {
+    background-position: left 10px center;
+    background-size: auto 24px;
+    margin-left: 24px;
+  }
 }
 body div#content {
   /* MAIN */
@@ -4076,8 +4124,8 @@ body div#content.sub section.sub-reservation div.container div.select-option > d
   background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='18.45' height='24.639' viewBox='0 0 18.45 24.639'%3E%3Cdefs%3E%3CclipPath id='clip-path'%3E%3Crect width='18.45' height='24.639' fill='%235a5a5a'/%3E%3C/clipPath%3E%3C/defs%3E%3Cg  clip-path='url(%23clip-path)'%3E%3Cpath d='M150.748,118.315l-2.467-6.84a1.4,1.4,0,0,0-1.316-.924H142.59v-2.311h2.923a1.049,1.049,0,0,0,0-2.1H142.59v-1.587a1.866,1.866,0,1,0-3.732,0v6.927a1.866,1.866,0,0,0,1.7,1.858,1.4,1.4,0,0,0,.164.01h5.258l2.134,5.915a1.4,1.4,0,0,0,2.633-.95' transform='translate(-132.381 -97.899)' fill='%235a5a5a'/%3E%3Cpath d='M14.419,207.568a1.05,1.05,0,0,0-1.472.187,6.056,6.056,0,1,1-7.661-9.037,1.049,1.049,0,1,0-1-1.847A8.155,8.155,0,1,0,14.606,209.04a1.05,1.05,0,0,0-.187-1.472' transform='translate(0 -187.568)' fill='%235a5a5a'/%3E%3Cpath d='M136.338,4.161a2.08,2.08,0,1,0-2.08-2.08,2.08,2.08,0,0,0,2.08,2.08' transform='translate(-127.996)' fill='%235a5a5a'/%3E%3C/g%3E%3C/svg%3E%0A") no-repeat #D1D1D1 center/40% auto;
 }
 body div#content.sub section.sub-reservation div.container div.select-option > div.seat div.map-check div.legend > div div p.seat-pregnant span {
-  border-color: #896967;
-  background: #9F8786;
+  border-color: #A384B5;
+  background: #E6D0F2;
 }
 body div#content.sub section.sub-reservation div.container div.select-option > div.seat div.map-check div.legend > div div p.checked::before {
   content: "";
@@ -4193,8 +4241,8 @@ body div#content.sub section.sub-reservation div.container div.select-option > d
   background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='28.506' height='28.507' viewBox='0 0 28.506 28.507'%3E%3Cdefs%3E%3CclipPath id='clip-path'%3E%3Crect width='28.506' height='28.507' transform='translate(-2 -2)' fill='%23f7f7f7' stroke='%23565656' stroke-width='2'/%3E%3C/clipPath%3E%3C/defs%3E%3Cg transform='translate(2 2)'%3E%3Cg  transform='translate(0 0)' clip-path='url(%23clip-path)'%3E%3Cpath d='M24.588,13.045A11.544,11.544,0,1,1,13.044,1.5,11.544,11.544,0,0,1,24.588,13.045' transform='translate(-0.791 -0.791)' fill='%23f7f7f7' stroke='%23707070' stroke-width='1'/%3E%3Cpath d='M24.588,13.045A11.544,11.544,0,1,1,13.044,1.5,11.544,11.544,0,0,1,24.588,13.045Z' transform='translate(-0.791 -0.791)' fill='%23f7f7f7' stroke='%23777' stroke-linecap='round' stroke-linejoin='round' stroke-width='2'/%3E%3Cline  y2='8' transform='translate(12.253 6.254)' fill='none' stroke='%23777' stroke-linecap='round' stroke-linejoin='round' stroke-width='2'/%3E%3Cline y2='1' transform='translate(12.253 17.254)' fill='none' stroke='%23777' stroke-linecap='round' stroke-linejoin='round' stroke-width='2'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E%0A") no-repeat #fff center/70% auto;
 }
 body div#content.sub section.sub-reservation div.container div.select-option > div.seat div.map-check div.outline div.area div p.seat-pregnant button {
-  border-color: #896967;
-  background: #9F8786;
+  border-color: #A384B5;
+  background: #E6D0F2;
 }
 body div#content.sub section.sub-reservation div.container div.select-option > div.seat div.map-check div.outline div.area div p.seat button, body div#content.sub section.sub-reservation div.container div.select-option > div.seat div.map-check div.outline div.area div p.seat::before, body div#content.sub section.sub-reservation div.container div.select-option > div.seat div.map-check div.outline div.area div p.seat-r button, body div#content.sub section.sub-reservation div.container div.select-option > div.seat div.map-check div.outline div.area div p.seat-r::before, body div#content.sub section.sub-reservation div.container div.select-option > div.seat div.map-check div.outline div.area div p.seat-n button, body div#content.sub section.sub-reservation div.container div.select-option > div.seat div.map-check div.outline div.area div p.seat-n::before, body div#content.sub section.sub-reservation div.container div.select-option > div.seat div.map-check div.outline div.area div p.seat-s button, body div#content.sub section.sub-reservation div.container div.select-option > div.seat div.map-check div.outline div.area div p.seat-s::before, body div#content.sub section.sub-reservation div.container div.select-option > div.seat div.map-check div.outline div.area div p.seat-disabled button, body div#content.sub section.sub-reservation div.container div.select-option > div.seat div.map-check div.outline div.area div p.seat-disabled::before, body div#content.sub section.sub-reservation div.container div.select-option > div.seat div.map-check div.outline div.area div p.checked button, body div#content.sub section.sub-reservation div.container div.select-option > div.seat div.map-check div.outline div.area div p.checked::before, body div#content.sub section.sub-reservation div.container div.select-option > div.seat div.map-check div.outline div.area div p.temp button, body div#content.sub section.sub-reservation div.container div.select-option > div.seat div.map-check div.outline div.area div p.temp::before {
   cursor: pointer;
