--- a/source/css/style.css
+++ b/source/css/style.css
@@ -2190,6 +2190,7 @@ body nav#main-menu a.blank {
     background-position: left 10px center;
     background-size: auto 24px;
     margin-left: 24px;
+    padding-left: 40px;
   }
 }
 body div#content {
