--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -225,6 +225,7 @@ body {
           background-position:left 10px center;
           background-size:auto 24px;
           margin-left:24px;
+          padding-left:40px;
         }
       }
     }
